--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BitboardEngine)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(BitboardEngine main.cpp position.cpp position.h constants.h useful.cpp useful.h types.cpp types.h bitboard.cpp bitboard.h tables.h)
+add_executable(BitboardEngine main.cpp position.cpp position.h constants.h useful.cpp useful.h types.cpp types.h bitboard.cpp bitboard.h tables.h move.cpp move.h)
